# meshtui

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile.flatpak  LICENSE.md  README.md  dev.gfd.meshtui.yaml
.github/workflows/: appimage.yaml  cd.yaml  flatpak.yaml  release-binaries.yaml
docs/: MeshPacket_example.md
etc/ci/: before_deploy.sh
src/: app.rs  clap.rs  consts.rs  ipc.rs  main.rs  meshtastic_interaction.rs  packet_handler.rs  tabs.rs  theme.rs  tui.rs  util.rs
src/tabs/: about.rs  channels.rs  config.rs  device_config.rs  messages.rs  modules_config.rs  nodes.rs
